--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     @Styles.Render("~/font-awesome/css")
     @Styles.Render("~/font-awesome3.2/css")
     @Styles.Render("~/easyui/css")
+    <link href="~/Content/main.css" rel="stylesheet" />
     <script src="~/js/jquery-1.8.2.min.js"></script>
     <script src="~/Content/bootstrap32/js/bootstrap.min.js"></script>
     <script src="~/js/hoverIntent.js"></script>
